# NATBuster

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md
client/: CMakeLists.txt  Client.cpp  c2_client.cpp  c2_client.h  c2_function.h  ip_client.cpp  ip_client.h  punch.cpp  punch.h  punch_sym_sym.cpp  punch_sym_sym.h  router.cpp  router.h  sym_sym.h
client_ip_udp/: CMakeLists.txt  ClientUDP.cpp
client_nat/: CMakeLists.txt  ClientNAT.cpp
common/: CMakeLists.txt  enc_aes_cbc_256.py  os.h  proto_v1.py  transport_udp.py  transport_ws.py
common/cli/: color.h
common/config/: config.cpp  config.h  parse.h
common/crypto/: algo.h  cipher.cpp  cipher.h  hash.cpp  hash.h  pem.cpp  pem.h  pkey.cpp  pkey.h  random.cpp  random.h  sha.cpp  sha.h
common/endpoint/: c2_client.cpp  c2_client.h  c2_function.h  c2_server.cpp  c2_server.h  ip_client.cpp  ip_client.h  ip_client_udp.cpp  ip_client_udp.h  ip_server.cpp  ip_server_udp.cpp  ip_server_udp.h  nat_client.cpp  nat_client.h  nat_server.cpp  nat_server.h  router.cpp  router.h
common/error/: codes.cpp  codes.h
common/identity/: identity.cpp  identity.h
common/network/: event.cpp  event.h  network.cpp  network.h  network_common.h  network_linux.cpp  network_linux.h  network_win.cpp  network_win.h  socket_pool.cpp  socket_pool.h
common/punch/: punch.cpp  sym_sym.cpp  sym_sym.h
common/transport/: encrypt.cpp  encrypt.h  holder.h  kex.h  kex_v1.cpp  kex_v1.h  opt_base.cpp  opt_base.h  opt_c2.h  opt_pipes.cpp  opt_pipes.h  opt_session.cpp  opt_session.h  opt_tcp.cpp  opt_tcp.h  opt_udp.cpp  opt_udp.h  session.cpp  session.h  tcp_over_udp.cpp  tcp_over_udp.h
common/utils/: blob.cpp  blob.h  callbacks.cpp  callbacks.h  copy_protection.h  data_queue.h  event.cpp  event.h  hex.cpp  hex.h  math.h  no_copy.h  random.h  shared_unique.h  text.h  time.cpp  time.h  version.cpp  version.h  waker.h
old/client/: main.py
old/common/: auth_eddsa.py  kex_eddhe.py  transport_common.py  transport_udp.py  transport_ws.py
server/: CMakeLists.txt  Server.cpp  main.py
server_c2/: CMakeLists.txt  ServerC2.cpp  c2_server.cpp  c2_server.h
server_ip/: CMakeLists.txt  ServerIP.cpp  ip_server.cpp  ip_server.h
server_nat/: CMakeLists.txt  ServerNAT.cpp
test/: CMakeLists.txt  test_aes_gcm.cpp  test_blob.cpp  test_compare.cpp  test_ecdh.cpp  test_eddsa.cpp  test_playground.cpp  test_sha.cpp
